--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "postmate",
-  "version": "1.5.0",
+  "version": "2.0.1-nb",
   "description": "A powerful, simple, promise-based postMessage library",
   "main": "build/postmate.js",
   "module": "build/postmate.es.js",
