--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "build": "npm run build:dist && npm run build:readme",
     "build:readme": "node ./scripts/update-readme.js",
     "build:dist": "rollup --config configs/rollup.config.js",
-    "postpublish": "git tag $npm_package_version && git push origin --tags"
+    "postversion": "git tag v$npm_package_version && git push origin --tags"
   },
   "jest": {
     "testRegex": "./test/unit/.*.js$",
